[package]
name = "rowlink"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
enigo = { version = "0.6.1", features = ["wayland"] }
iced = { version = "0.14", features = ["canvas", "tokio"] }
iced_layershell = "0.15.0"
serde = "1.0.228"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["signal"] }
